--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,16 @@
             "email": "jedlynch@gmail.com"
         }
     ],
-    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^7.0",
+        "robmorgan/phinx": "^0.9.2",
+        "php-cs-fixer/diff": "^1.2",
+        "symfony/yaml": "^4.0"
+    },
     "autoload": {
         "psr-4": {
-            "": "app/"
+            "": "app/",
+            "test\\":"test/"
         }
     }
 }
